add swagger on image api
